--- a/wsl_files/alpine-wsl-distribution.conf
+++ b/wsl_files/alpine-wsl-distribution.conf
@@ -3,11 +3,11 @@
 [oobe]
 command = /etc/oobe.sh
 defaultUid = 1000
-defaultName = alpinester
+defaultName = alpine
 
 [shortcut]
 enabled = true
-icon = /usr/lib/wsl/my-icon.ico
+icon = /usr/lib/wsl/alpine.ico
 
 [windowsterminal]
 enabled = true
